<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gbrenegadzdev.com.groceryapp.activities.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/img_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="?android:attr/actionModePasteDrawable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/md_white_1000"
                android:inputType="textPersonName"
                android:hint="@string/username"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="@color/md_white_1000"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_account_sign_up" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_gravity="bottom">


            <Button
                android:id="@+id/btn_sign_in_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_facebook" />

            <Button
                android:id="@+id/btn_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_email" />
        </LinearLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
